--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="src/style/main.css" />
+    <link rel="stylesheet" type="text/css" href="/src/style/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Street-Arts Hunters</title>
   </head>
